fixed hero , now text aligns with image

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -21,7 +21,6 @@
 
 body {
     margin: 0 auto;
-    padding: 2rem;
     text-align: center;
     background-color: #efe085;
 }
@@ -112,10 +111,12 @@ body {
     height: auto;
 }
 .main-content p {
-    background-color: rgba(0, 0, 0, 0.1);
+    /*background-color: rgba(0, 0, 0, 0.40);*/
+    border-radius: 1%;
 }
 .main-content h1 {
-    background-color: rgba(0, 0, 0, 0.1);
+    /*background-color: rgba(0, 0, 0, 0.40);*/
+    border-radius: 1%;
 }
 /* Image Container */
 .image-container {
@@ -147,7 +148,7 @@ body {
     /*background-color: #888888;*/
     background: rgba(0, 0, 0, 0.5);
     border: #333333 2px solid;
-    box-shadow: 5px 5px 8px #1b1b1b, -5px -5px 8px #272727;
+    box-shadow: 0px 0px 0px #1b1b1b, 0px 0px 0px #272727;
 }
 
 /* Define a container for the row */
@@ -174,38 +175,40 @@ body {
 .space {
     /*margin-left: 150px;*/
 }
-
 /* New styles for the overlay effect */
 .overlay-container {
+    position: relative; /* Position relative for absolute positioning of text */
     width: 100%;
-    position: relative;
     text-align: center;
     color: white;
 }
 
-.overlay-hero {
-    /*background-image: linear-gradient(rgba(189, 12, 66, 0.24), rgba(41, 59, 175, 0.16)); !*  to make the text more readable *!*/
-}
-
 .overlay-container img {
     width: 100%;
-    height: 600px;
-
+    height: auto;
 }
 
-.text-overlay {
-    font-size: 20px;
+.overlay-hero {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
+    padding-top: 20px;
     border-radius: 10px;
-    width: 1200px;
-    height: 540px;
+    width: 100%; /* Adjust width as needed */
+    height: 100%;
+    background: linear-gradient(rgba(33, 7, 203, 0.24), rgba(17, 36, 164, 0.16)); /* Gradient background for readability */
+    border: 1px solid; /* Define a solid border to apply border-image to */
+    border-image-source: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)); /* Gradient for border image */
+    border-image-slice: 1; /* Ensure the border image covers the entire border area */
+    border-image-width: 10px; /* Define the width of the border image */
+    border-image-outset: 0; /* Optional: define the amount by which the border image area extends beyond the border box */
+    border-image-repeat: stretch; /* Ensure the border image stretches to fill the entire border */
 }
-
-.text-overlay h1 {
+.overlay-hero-text{
+    font-size: 1.5em;
+}
+.overlay-hero h1 {
     margin: 0 0 20px 0;
     font-size: 2em;
 }
